--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "checkly": "latest",
-    "ts-node": "10.9.1",
-    "typescript": "4.9.5"
+    "checkly": "latest"
   }
 }
